# pyperf

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  COPYING  MANIFEST.in  README.rst  TODO.rst  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  lint.yml  publish.txt  publish.yml
doc/: Makefile  analyze.rst  api.rst  changelog.rst  cli.rst  conf.py  developer_guide.rst  examples.rst  index.rst  make.bat  outliers.json  perf.rst  run_benchmark.rst  runner.rst  system.rst  text_runner.rst  timeit.rst  timeit_strip.json  usage.rst  user_guide.rst
doc/examples/: bench_async_func.py  bench_async_func_with_loop_factory.py  bench_command.py  bench_func.py  bench_sample_func.py  bench_time_func.py  bench_timeit.py  export_csv.py  hist_scipy.py  plot.py
perf/: __init__.py  __main__.py  _bench.py  _cli.py  _collect_metadata.py  _command.py  _compare.py  _cpu_utils.py  _formatter.py  _master.py  _memory.py  _metadata.py  _process_time.py  _runner.py  _system.py  _text_runner.py  _timeit.py  _timeit_cli.py  _utils.py  _worker.py  metadata.py  result.py  text_runner.py  timeit.py
perf/tests/: __init__.py  replay.py  telco.json  test_bench.py  test_cli.py  test_examples.py  test_metadata.py  test_misc.py  test_perf_cli.py  test_result.py  test_runner.py  test_system.py  test_text_runner.py  test_timeit.py  test_tools.py  track_memory.json
pyperf/: __init__.py  __main__.py  _bench.py  _cli.py  _collect_metadata.py  _command.py  _compare.py  _cpu_utils.py  _formatter.py  _hooks.py  _inprocess_manager.py  _linux_memory.py  _manager.py  _master.py  _memory.py  _metadata.py  _process_time.py  _psutil_memory.py  _runner.py  _system.py  _timeit.py  _timeit_cli.py  _utils.py  _win_memory.py  _worker.py  read_file.c
pyperf/tests/: __init__.py  mult_list_bench.py  mult_list_py36.json  mult_list_py36_tags.json  mult_list_py37.json  mult_list_py37_tags.json  mult_list_py38.json  replay.py  test_bench.py  test_cli.py  test_examples.py  test_extra_metadata.py  (+10 more)
